--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
         <h1>Boilerplate</h1>
 
-        <p>Boilerplate is any text that is or can be reused in new contexts or applications without being greatly changed from the original.</p>
+        <button onclick="myFunction()">Contents</button>
 
+        <div id="button">
         <h2>Contents</h2>
-
         <ol>
             <li>Etymology</li>
             <li>Boilerplate language</li>
@@ -38,6 +38,9 @@
             <li>See also</li>
             <li>External links</li>
         </ol>
+        </div>
+
+        <p>Boilerplate is any text that is or can be reused in new contexts or applications without being greatly changed from the original.</p>
 
         <h2>Etymology</h2>
 
